2012-06-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/Makefile.am:
	- 不足していたヘッダファイルを追加

	* rcsc/player/world_model.cpp:
	- オフサイドライン更新でプレイヤの移動量をめに見積るように変更

	* rcsc/Makefile.am:
	- 誤使用回避のために共有ライブラリバージョンを8に変更

	* rcsc/player/ball_object.cpp:
	- コミュニケーションによる情報更新を修正．パスメッセージによる更新
	を受け付ける信頼性カウントしきい値を1から0へ変更

	* rcsc/player/world_model.cpp:
	- WorldModel::prevOffsideLineX()を追加

2012-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/neck_scan_players.cpp:
	- 指定範囲内で敵を観測できそうにない場合に最初の候補が常に選択され
	ていたバグを修正

	* rcsc/player/world_model.cpp:
	- 位置の差分でボール速度情報を更新する条件を修正．衝突が発生して通
	常の推定が失敗した場合に，絶対一差分で速度情報を更新する範囲を拡大

	* rcsc/player/ball_object.cpp:
	- セットプレイ時に視界を広くしているとボールを見失ってしまうバグを修正

	* rcsc/player/player_agent.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- 聴覚情報で得たスタミナ情報を参照できるようにした

2012-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_intercept.cpp:
	- 他のプレイヤに与えるボーナスステップの方針を元に戻した

	* rcsc/player/world_model.cpp:
	- 味方がキック可能な場合にボール速度0にするルールを無効化

	* rcsc/player/ball_object.cpp:
	- コミュニケーションによる情報更新のしきい値を修正．自分が見た情報
	を優先する
	- 優先するのは位置情報のみとする

2012-06-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/abstract_player_object.cpp:
	* rcsc/player/abstract_player_object.h:
	* rcsc/player/body_sensor.h:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/self_object.cpp:
	* rcsc/player/self_object.h:
	- M_pointto_angleとM_pointto_countをAbstractPlayerObjectへ移動
	- SelfObject::armExpires()を追加

2012-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 最後のキッカーが味方だった場合に次の更新で不具合が起きることがあっ
	たので修正．味方プレイヤがキッカブルの場合に速度0とするように変更
	したことの影響

	* rcsc/action/basic_actions.cpp:
	- Neck_TurnToBallを修正．敵のボール捕捉サイクル数が1以下の場合はボー
	ル方向へ確実に首を向けるルールを追加

	* rcsc/player/self_intercept_v13.cpp:
	- 全方位インターセプトを修正．成功判定条件が誤っていた

2012-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	- ゴールポストとの衝突回避アルゴリズムのバグを修正
